Fix redundant frame capture in stream capture from WebGL

In CL https://codereview.chromium.org/2768683002, we neglected
to consider that WebGL had an independent mechanism for signaling
animation frames to canvas content listeners (like stream captures)
The existing WebGL mechanism suffered the same problem as the 2D
canvas mechanism: it is tied to compositing, and therefore
does not trigger when the canvas is not visible.  This CL simply
removes the old code path to leave only the mechanism from CL
https://codereview.chromium.org/2768683002, which works for both
2D canvas and WebGL, visible or not visible.

BUG=724664

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ia42596682eaba248d53787e5a41777cd80f584a6
Reviewed-on: https://chromium-review.googlesource.com/517764
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#475980}
Former-commit-id: 7afb5d6ecb4e07b91c16c85cee3e70d91467452c